OY-3358 : Slight refactoring & cleanup